style: fix responsive layout and overlap issues with 3D model on mobile and tablet

--- a/src/index.css
+++ b/src/index.css
@@ -147,7 +147,7 @@ section {
   }
 
   .hero-layout {
-    @apply relative z-10 xl:mt-20 mt-24 xl:h-dvh h-auto flex xl:items-center items-start justify-center w-full;
+    @apply relative z-10 xl:mt-20 mt-28 xl:h-dvh h-auto flex flex-col xl:flex-row xl:items-center items-center justify-center w-full;
   }
 
   .hero-text {
@@ -166,7 +166,7 @@ section {
   }
 
   .hero-3d-layout {
-    @apply xl:w-[70%] w-full h-full min-h-[50vh] absolute xl:-top-20 top-24 xl:-right-20 right-0;
+    @apply relative w-full h-[40vh] min-h-[300px] mt-8 xl:absolute xl:-top-20 xl:-right-20 xl:w-[70%] xl:h-full xl:min-h-[50vh] xl:mt-0;
   }
 
   .navbar {
